--- a/staffpicks.html
+++ b/staffpicks.html
@@ -116,11 +116,12 @@
 
   .filters {
     display: flex;
-    justify-content: center;
+    justify-content: flex-start; 
     gap: 1rem;
     flex-wrap: wrap;
     margin-bottom: 2rem;
   }
+  
   .filters button {
     padding: 0.5rem 1rem;
     border: none;
