--- a/staffpicks.html
+++ b/staffpicks.html
@@ -77,19 +77,18 @@
     border-radius: 2px;
   }
 
-  /* Fixed gradient heading (matches Fiction page colors + cross-browser) */
   .gradient-heading {
-    font-size: 2.5rem;
-    font-family: 'Orbitron', sans-serif;
-    background: linear-gradient(90deg, #f72585, #7209b7);
-    background-clip: text;              /* standard */
-    -webkit-background-clip: text;      /* webkit */
-    color: transparent;                  /* standard */
-    -webkit-text-fill-color: transparent;/* webkit */
-    display: inline-block;               /* ensure clip fits text width */
-    margin-bottom: 1.5rem;
-    text-align: center;
-  }
+  font-size: 2.5rem;
+  font-family: 'Orbitron', sans-serif;
+  background: linear-gradient(90deg, #f72585, #7209b7);
+  background-clip: text;              
+  -webkit-background-clip: text;      
+  color: transparent;                  
+  -webkit-text-fill-color: transparent;
+  display: block;   
+  margin-bottom: 1.5rem;
+  text-align: center;    
+}
 
   @media (max-width: 768px) {
     .hamburger { display: flex; }
@@ -116,7 +115,7 @@
 
   .filters {
     display: flex;
-    justify-content: flex-start; 
+    justify-content: center; 
     gap: 1rem;
     flex-wrap: wrap;
     margin-bottom: 2rem;
