--- a/index.html
+++ b/index.html
@@ -345,7 +345,7 @@
     <a href="fiction.html" class="card-link">
       <div class="card">
         <img src="AL Cover.png" alt="Featured Stories image">
-        <h3>Featured Stories</h3>
+        <h3>Issue Library</h3>
       </div>
     </a>
     <a href="bestmedia.html" class="card-link">
@@ -415,4 +415,5 @@
   </script>
 </body>
 </html>
+
 
